# amgd_package

./: pyproject.toml  setup.py  setup_structure.sh
.github/workflows/: amgd.yml  test.yml
amgd/: __init__.py.save
amgd.egg-info/: PKG-INFO
docs/source/: references.bib
tests/: test_poisson.py
