[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amgdoptimizer"
version = "1.0.0"
description = "Adaptive Momentum Gradient Descent for Regularized Poisson Regression"
authors = [
    { name = "Ibrahim Bakari", email = "2020913072@ogr.cu.edu.tr" },
    { name = "M. Revan Özkale", email = "mrevan@cu.edu.tr" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0"
]
keywords = ["machine learning", "poisson regression", "optimization", "sparsity", "regularization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=2.15"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.12",
    "nbsphinx>=0.8",
    "jupyter>=1.0"
]
benchmarks = [
    "seaborn>=0.11",
    "plotly>=5.0",
    "memory-profiler>=0.60"
]

[project.urls]
Homepage = "https://github.com/elbakari01/amgd-poisson-regression" 
Documentation = "https://amgd-poisson.readthedocs.io" 
Repository = "https://github.com/elbakari01/amgd-poisson-regression" 
"Bug Reports" = "https://github.com/elbakari01/amgd-poisson-regression/issues" 

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/amgd --cov-report=html --cov-report=term-missing"

[tool.black]
line_length = 88
target_version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true